--- a/assets/less/components/mixins.less
+++ b/assets/less/components/mixins.less
@@ -13,3 +13,11 @@
 .transition(@prop: all, @time: 0.3s, @ease: ease-in-out) {
   transition: @prop @time @ease;
 }
+
+.bg-img(@img, @pos:center, @att:scroll) {
+	background-image: url('@{img-folder}@{img}');
+	background-position: @pos;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: scroll;	
+}
