--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1735,7 +1735,7 @@ select[multiple].input-lg {
   text-transform: uppercase;
 }
 .ul-unstyled,
-.site-nav ul {
+.horizontal-nav {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -1748,6 +1748,11 @@ select[multiple].input-lg {
 .row.no-gutters > [class*=" col-"] {
   padding-right: 0;
   padding-left: 0;
+}
+.stn-padding,
+.stn-services,
+.stn-portfolio {
+  padding: 80px 0;
 }
 @font-face {
   font-family: 'Segoe';
@@ -1808,7 +1813,7 @@ select[multiple].input-lg {
 .sprite-dslr {
   background-position: -5px -106px;
   width: 47px;
-  height: 45px;
+  height: 48px;
 }
 .sprite-coffee {
   background-position: -5px -156px;
@@ -1841,6 +1846,31 @@ select[multiple].input-lg {
 .icon-dribbble:before {
   content: "\f17d";
 }
+.horizontal-nav li {
+  display: inline-block;
+  margin-left: 15px;
+}
+.horizontal-nav li a {
+  transition: all 0.3s ease-in-out;
+  display: block;
+  border: 2px solid transparent;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px 17px;
+  line-height: 1;
+}
+.horizontal-nav li a.active {
+  border-color: #4bcaff;
+  color: #4bcaff;
+}
+.horizontal-nav li a:hover {
+  color: #4bcaff;
+}
+.horizontal-nav.black-font a {
+  color: #515f67;
+}
 body {
   font-family: 'Segoe', Arial, sans-serif;
   font-size: 14px;
@@ -1862,30 +1892,8 @@ body {
   background-color: rgba(72, 82, 90, 0.85);
   padding: 60px 0;
 }
-.site-nav ul {
+.site-nav .horizontal-nav {
   float: right;
-}
-.site-nav ul li {
-  display: inline-block;
-  margin-left: 15px;
-}
-.site-nav ul li a {
-  transition: all 0.3s ease-in-out;
-  display: block;
-  border: 2px solid transparent;
-  color: #fff;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 10px 17px;
-  line-height: 1;
-}
-.site-nav ul li a.active {
-  border-color: #4bcaff;
-  color: #4bcaff;
-}
-.site-nav ul li a:hover {
-  color: #4bcaff;
 }
 .hero-heading {
   margin: 250px 0;
@@ -1898,4 +1906,135 @@ body {
 .hero-heading span {
   background-color: #48525a;
   bottom: 0 20px;
+}
+.stn-heading {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 2.143em;
+  margin-top: 0;
+  margin-bottom: 40px;
+  line-height: 1;
+}
+.stn-heading:after {
+  content: '';
+  width: 45px;
+  height: 2px;
+  background-color: #fff;
+  margin-top: 10px;
+}
+.stn-heading.black-line:after {
+  background-color: #515f67;
+}
+.stn-services {
+  background-color: #4bcaff;
+  color: #fff;
+  font-weight: 500;
+}
+.stn-services h3 {
+  text-transform: uppercase;
+  font-size: 1.714em;
+  line-height: 1;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+@media (max-width: 1200px) {
+  .stn-services [class^="col-"] {
+    margin-bottom: 50px;
+  }
+}
+.stn-portfolio .horizontal-nav {
+  float: right;
+}
+.stn-portfolio .stn-heading {
+  margin-bottom: 80px;
+  padding-left: 0;
+}
+.thumbs-row {
+  min-height: 570px;
+}
+.thumbs-row [class^='col-'] {
+  margin-bottom: 30px;
+}
+.thumbs-row a {
+  display: block;
+  height: 270px;
+  background-color: pink;
+  position: relative;
+  color: #fff;
+  font-size: 72px;
+  text-align: center;
+}
+.thumbs-row a:after {
+  position: absolute;
+  content: '+';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #454e56;
+  background-color: rgba(69, 78, 86, 0.8);
+  font-weight: 200;
+  line-height: 1;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.thumbs-row a:hover:after {
+  opacity: 1;
+  line-height: 3.75;
+}
+.thumb-1 {
+  background-image: url('../img/thumb-1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-2 {
+  background-image: url('../img/thumb-2.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-3 {
+  background-image: url('../img/thumb-3.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-4 {
+  background-image: url('../img/thumb-4.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-5 {
+  background-image: url('../img/thumb-5.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-6 {
+  background-image: url('../img/thumb-6.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-7 {
+  background-image: url('../img/thumb-7.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-8 {
+  background-image: url('../img/thumb-8.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
 }
