--- a/assets/less/components/interface.less
+++ b/assets/less/components/interface.less
@@ -1,1 +1,34 @@
 //forms, buttons, dialogs etc.
+.horizontal-nav {
+		&:extend(.ul-unstyled);
+
+		li {
+			display: inline-block;
+			margin-left: 15px;
+
+			a {
+				.transition();
+				display: block;
+				border: 2px solid transparent;
+				color: #fff;
+				font-weight: 600;
+				text-transform: uppercase;
+				text-decoration: none;
+				padding: 10px 17px;
+				line-height: 1;
+
+				&.active {
+					border-color: @accent;
+					color: @accent;
+				}
+
+				&:hover {
+					color: @accent;
+				}
+			}
+		}
+
+		&.black-font a {
+			color: @font;
+		}
+	}
