--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -1,3 +1,4 @@
+// header begin
 .site-header {
 	.bg-img('hero-img.jpg');
 	-ms-behavior: url(/assets/ie8-support/backgroundsize.min.htc);
@@ -10,33 +11,9 @@
 	background-color: @overlay; 
 	background-color: fade(@overlay, 85%);
 	padding: 60px 0;
-	ul {
-		&:extend(.ul-unstyled);
+
+	.horizontal-nav {
 		float: right;
-
-		li {
-			display: inline-block;
-			margin-left: 15px;
-			a {
-				.transition();
-				display: block;
-				border: 2px solid transparent;
-				color: #fff;
-				font-weight: 600;
-				text-transform: uppercase;
-				text-decoration: none;
-				padding: 10px 17px;
-				line-height: 1;
-				&.active {
-					border-color: @accent;
-					color: @accent;
-				}
-
-				&:hover {
-					color: @accent;
-				}
-			}
-		}
 	}
 }
 
@@ -54,4 +31,140 @@
 	}
 }
 
+.stn-heading {
+	text-transform: uppercase;
+	font-weight: 300;
+	font-size: 2.143em;
+	margin-top: 0;
+	margin-bottom: 40px;
+	line-height: 1;
 
+	&:after {
+		content: '';
+		width: 45px;
+		height: 2px;
+		background-color: #fff;
+		margin-top: 10px;
+	}
+
+	&.black-line:after {
+		background-color: @font;
+	}
+}
+// header end
+
+// section services begin
+.stn-services {
+	&:extend(.stn-padding);
+	background-color: @accent;
+	color: #fff;
+	font-weight: 500;
+
+	h3 {
+		text-transform: uppercase;
+		font-size: 1.714em;
+		line-height: 1;
+		margin-top: 20px;
+		margin-bottom: 15px;
+	}
+
+	[class^="col-"] {
+		@media (max-width: 1200px) {
+			margin-bottom: 50px; 
+		}
+	}
+}
+// section services end
+
+//section portfolio begin
+	.stn-portfolio {
+		&:extend(.stn-padding);
+
+		.horizontal-nav {
+			float: right;
+		}
+
+		.stn-heading {
+			margin-bottom: 80px;
+			padding-left: 0;
+		}
+	}
+
+	.thumbs-row{
+		min-height: 570px;
+
+		[class^='col-'] {
+			margin-bottom: 30px;
+		}
+
+		a {
+			display: block;
+			height: 270px;
+			background-color: pink;
+			position: relative;
+			color: #fff;
+			font-size: 72px;
+			text-align: center;
+
+			&:after {
+				position: absolute;
+				content: '+';
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: #454e56;
+				background-color: fade(#454e56, 80%);
+				font-weight: 200;
+				line-height: 1;
+				opacity: 0;
+				transition: all 0.3s ease-in-out;
+			}
+
+			&:hover:after {
+				opacity: 1;
+				line-height: 270 / 72;
+			}
+		}
+	} 
+//section portfolio end
+
+.mix(@i) when (@i > 0) {
+	.mix((@i - 1));
+	.thumb-@{i} {
+		.bg-img('thumb-@{i}.jpg');
+	}
+}
+.mix(8);
+
+// .thumb-1 {
+// 	.bg-img('thumb-1.jpg');
+// }
+
+// .thumb-2 {
+// 	.bg-img('thumb-2.jpg');
+// }
+
+// .thumb-3 {
+// 	.bg-img('thumb-3.jpg');
+// }
+
+// .thumb-4 {
+// 	.bg-img('thumb-4.jpg');
+// }
+
+// .thumb-5 {
+// 	.bg-img('thumb-5.jpg');
+// }
+
+// .thumb-6 {
+// 	.bg-img('thumb-6.jpg');
+// }
+
+// .thumb-7 {
+// 	.bg-img('thumb-7.jpg');
+// }
+
+// .thumb-8 {
+// 	.bg-img('thumb-8.jpg');
+// }
