--- a/assets/less/components/mixins.less
+++ b/assets/less/components/mixins.less
@@ -21,3 +21,21 @@
 	background-size: cover;
 	background-attachment: scroll;	
 }
+
+.btn-univ(@font:1em, @padding_t_b:1.07em, @padding_l_r:2.856em, @color:#353f46, @colorHover:#fff) {
+  display: inline-block;
+  text-transform: uppercase;
+  line-height: 1;
+  font-weight: 600;
+  color: @color;
+  border: 2px solid @color;
+  padding: @padding_t_b @padding_l_r;
+  transition: all .3s ease-in-out;
+  font-size: @font;
+
+  &:hover {
+    text-decoration: none;
+    color: @colorHover;
+    border-color: @colorHover;
+  }
+}
