--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -127,7 +127,7 @@
 			}
 		}
 	} 
-//section portfolio end
+
 
 .mix(@i) when (@i > 0) {
 	.mix((@i - 1));
@@ -136,6 +136,7 @@
 	}
 }
 .mix(8);
+//section portfolio end
 
 // .thumb-1 {
 // 	.bg-img('thumb-1.jpg');
@@ -168,3 +169,70 @@
 // .thumb-8 {
 // 	.bg-img('thumb-8.jpg');
 // }
+
+// section video begin
+	 .stn-video {
+	 	&:extend(.stn-padding);
+
+	 	@media (min-width: 992px){
+			padding-bottom: 30px;
+	 	}
+
+	 	background-color: #515f67;
+	 	color: #fff;
+
+	 	.btn-univ-gray {
+	 		margin-bottom: 50px;
+	 	}
+	 }
+
+	 .stn-video-col {
+	 	margin-top: -80px;
+
+	 	@media (max-width: 992px) {
+	 		margin-top: 0;
+	 	}
+	 }
+
+	 .videoWrapper {
+	     position: relative;
+	     padding-bottom: 56.25%;
+	     /* 16:9 */
+	     padding-top: 25px;
+	     height: 0;
+
+	     iframe {
+	     position: absolute;
+	     top: 0;
+	     left: 0;
+	     width: 100%;
+	     height: 100%;
+	 	}
+	 }
+
+	 .btn-univ-gray{
+	 	.btn-univ();
+	 }
+
+// section video end
+
+	.stn-twitter {
+		&:extend(.stn-padding);
+		background-color: @accent;
+		color: #fff;
+
+		p {
+			font-size: 2em;
+			font-weight: 300;
+
+		}
+
+		strong {
+			font-weight: 500;
+		}
+	}
+
+	.stn-twitter-icon {
+		font-size: 24px;
+		float: right;
+	}
