--- a/assets/less/components/icons.less
+++ b/assets/less/components/icons.less
@@ -54,15 +54,19 @@
 }
 
 .icon-twitter:before {
-    content: "\f099";
+    content: "\e901";
 }
 .icon-google-plus:before {
-    content: "\f0d5";
+    content: "\e903";
 }
 .icon-coffee:before {
-    content: "\f0f4";
+    content: "\e900";
 }
 .icon-dribbble:before {
-    content: "\f17d";
+    content: "\e902";
+}
+
+.icon-quote:before {
+    content: "\e904";
 }
 
