--- a/assets/less/components/interface.less
+++ b/assets/less/components/interface.less
@@ -32,3 +32,44 @@
 			color: @font;
 		}
 	}
+
+	// form
+
+	.frm-group {
+		margin-bottom: 35px;
+	}
+
+	.frm-control {
+		background-color: transparent;
+		border: 2px solid #fff;
+		height: 60px;
+		width: 100%;
+		padding: 0 15px;
+	}
+
+	textarea.frm-control {
+		height: 215px;
+	}
+
+	label {
+		text-transform: uppercase;
+		font-weight: 600;
+		display: block;
+	}
+
+	.btn-submit {
+		width: 100%;
+		background-color: @accent;
+		border: none;
+		text-transform: uppercase;
+		line-height: 1;
+		padding: 25px 0;
+		font-weight: 600;
+		border: 2px solid @accent;
+		.transition();
+
+		&:hover {
+			background-color: transparent;
+			color: @accent;
+		}
+	}
