--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -92,7 +92,7 @@
 
 	.thumbs-row{
 		min-height: 570px;
-		z-index: 0;f
+		z-index: 0;
 
 		[class^='col-'] {
 			margin-bottom: 30px;
@@ -107,6 +107,7 @@
 			font-size: 72px;
 			text-align: center;
 			text-decoration: none;
+			
 
 			&:after {
 				position: absolute;
